fixed concurrency issue for tests